feat: added analysis notebook for dqn

--- a/Pyrace_performance_analysis_DQN.ipynb
+++ b/Pyrace_performance_analysis_DQN.ipynb
@@ -4,90 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# IE Pyrace - Performance Analysis"
+    "# IE Pyrace - Performance Analysis DQN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "VERSION_NAME = 'dqn_model' # the name for our model\n",
-    "episode = 30000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 153
-    },
-    "id": "yegv8Ow6Ihgf",
-    "outputId": "65195885-6b79-43bf-81e7-cbc5c1276357",
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'models_QT_v02/memory_35000.npy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m ep \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m      7\u001b[0m episodes \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m----> 8\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mMEMORY\u001b[49m\u001b[43m,\u001b[49m\u001b[43mallow_pickle\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# loading Object arrays\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(data\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]):\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m data[i,\u001b[38;5;241m4\u001b[39m]:\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.12.0/envs/reinforcement-learning/lib/python3.12/site-packages/numpy/lib/_npyio_impl.py:459\u001b[0m, in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding, max_header_size)\u001b[0m\n\u001b[1;32m    457\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m    458\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 459\u001b[0m     fid \u001b[38;5;241m=\u001b[39m stack\u001b[38;5;241m.\u001b[39menter_context(\u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfspath\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[1;32m    460\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m    462\u001b[0m \u001b[38;5;66;03m# Code to distinguish from NumPy binary files and pickles.\u001b[39;00m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'models_QT_v02/memory_35000.npy'"
-     ]
-    }
-   ],
-   "source": [
-    "#import required libraries\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "last = 0\n",
-    "ep = 0\n",
-    "episodes = []\n",
-    "data = np.load(MEMORY,allow_pickle=True) # loading Object arrays\n",
-    "for i in range(data.shape[0]):\n",
-    "    if data[i,4]:\n",
-    "        ep += 1\n",
-    "        # print(ep,last,i,i-last,data[i])\n",
-    "        episodes.append([ep,i-last,data[i][2]])\n",
-    "        last = i\n",
-    "\n",
-    "df = pd.DataFrame(data=episodes, index=None, columns=['episode','steps','reward'])   \n",
-    "# df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "from scipy.signal import savgol_filter\n",
-    "yhat0 = savgol_filter(df.reward, int(episode/120), 3) # window size 50, polynomial order 3\n",
-    "yhat1 = savgol_filter(df.reward, int(episode/30), 1)\n",
-    "\n",
-    "plt.figure(figsize=(16,6))\n",
-    "# plt.plot(df.episode,df.reward)\n",
-    "plt.plot(df.episode,yhat0)\n",
-    "plt.plot(df.episode,yhat1)\n",
-    "plt.title('AVERAGED REWARDS')\n",
-    "plt.show()\n",
-    "\n",
-    "plt.figure(figsize=(16,6))\n",
-    "df['z'] = np.where(df.reward > 0, (df.reward)/df.steps, (10000+df.reward)/df.steps)\n",
-    "plt.plot(df.z.rolling(window=int(episode/15)).mean())\n",
-    "plt.title('AVERAGED REWARD PER ACTION STEP')\n",
-    "plt.show()"
+    "# First cell of your notebook\n",
+    "import matplotlib\n",
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
